adding Log Work view.

--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -45,5 +45,52 @@
       <button type="submit" class="btn btn-default">Send invitation</button>
     </form>
     
+    <br />
+    <br />
+    
+    <form class="form-horizontal">
+      <div class="form-group">
+        <div class="col-md-3">
+          <label for="logDate">Date</label>
+          <input type="text" class="form-control datepicker" id="logDate" placeholder="" data-date-auto-close="true">
+          <!-- required for datepicker -->
+          <div class="input-group-addon" style="opacity: 0;"></div>
+        </div>
+
+        <div class="col-md-3">
+          <label for="logWorkType">Type of Work:</label>
+          <select class="form-control" id="logWorkType">
+            <option>Type 1</option>
+            <option>Type 2</option>
+            <option>Type 3</option>
+          </select>
+        </div>
+
+        <div class="col-md-3">
+          <label for="logProject">Type of Work:</label>
+          <select class="form-control" id="logProject">
+            <option>Project 1</option>
+            <option>Project 2</option>
+            <option>Project 3</option>
+          </select>
+        </div>
+
+        <div class="col-md-3">
+          <label for="logHour">Hours Worked:</label>
+          <input type="number" class="form-control" id="logHour" placeholder="" step="0.25"><span>hours</span>
+        </div>
+      </div>
+      
+      <div class="form-group">
+        <div class="col-md-12">
+          <label for="logDesc">Description of Work:</label><br />
+          <textarea class="form-control" rows="3" id="logDesc" placeholder="Describe the work you did."></textarea>
+        
+          <br />
+          <button type="submit" class="btn btn-default">Send invitation</button>
+        </div>
+      </div>
+    </form>
+    
   </div>
 </div>
