adding Log Work view.

--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -50,7 +50,7 @@
     
     <form class="form-horizontal">
       <div class="form-group">
-        <div class="col-md-3">
+        <div class="col-md-3 input-group date" data-provide="datepicker">
           <label for="logDate">Date</label>
           <input type="text" class="form-control datepicker" id="logDate" placeholder="" data-date-auto-close="true">
           <!-- required for datepicker -->
@@ -77,7 +77,7 @@
 
         <div class="col-md-3">
           <label for="logHour">Hours Worked:</label>
-          <input type="number" class="form-control" id="logHour" placeholder="" step="0.25"><span>hours</span>
+          <input type="number" class="form-control" id="logHour" placeholder="" step="0.25">
         </div>
       </div>
       
