adding Log Work view.

--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -50,11 +50,13 @@
     
     <form class="form-horizontal">
       <div class="form-group">
-        <div class="col-md-3 input-group date" data-provide="datepicker">
-          <label for="logDate">Date</label>
-          <input type="text" class="form-control datepicker" id="logDate" placeholder="" data-date-auto-close="true">
-          <!-- required for datepicker -->
-          <div class="input-group-addon" style="opacity: 0;"></div>
+        <div class="col-md-3">
+          <div class="input-group date" data-provide="datepicker">
+            <label for="logDate">Date</label>
+            <input type="text" class="form-control datepicker" id="logDate" placeholder="" data-date-auto-close="true">
+            <!-- required for datepicker -->
+            <div class="input-group-addon" style="opacity: 0;"></div>
+          </div>
         </div>
 
         <div class="col-md-3">
