adding Log Work view.

--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -42,7 +42,7 @@
           <textarea class="form-control" rows="3" id="logDesc" placeholder="Describe the work you did."></textarea>
         
           <br />
-          <button type="submit" class="btn btn-default">Send invitation</button>
+          <button type="button" class="btn btn-default" id="submitButton">Submit</button>
         </div>
       </div>
     </form>
