Creating work report view

--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -269,6 +269,8 @@
           
           <div class="container" id="logWorkView" hidden></div>
           
+          <div class="container" id="workReportView" hidden></div>
+          
           <!--
           <div class="container" id="pagesView" hidden>            
           </div>
