Creating work report view

--- a/public/js/logwork/templates/leftMenu.html
+++ b/public/js/logwork/templates/leftMenu.html
@@ -31,6 +31,7 @@
   
   <li><a href="#" id="logWorkLink"><i class="fa fa-clock-o"></i> <span>Log  Work</span></a></li>
   <li><a href="#" id="viewProjects"><i class="fa fa-cog"></i> <span>View Projects</span></a></li>
+  <li><a href="#" id="workReportLink"><i class="fa fa-edit"></i> <span>Work Reports</span></a></li>
   <!--
   <li class="treeview">
     <a href="#" id="postsLink"><i class="fa fa-newspaper-o"></i> <span>Posts</span> <i class="fa fa-angle-left pull-right"></i></a>
