Adding bootstrap-table library

--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -22,6 +22,9 @@
           apply the skin class to the body tag so the changes take effect.
     -->
     <link rel="stylesheet" href="../styles/skins/skin-blue.min.css">
+    
+    <!-- Bootstrap Table Library -->
+    <link rel="stylesheet" href="../styles/bootstrap-table.css" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
