--- a/public/js/logwork/templates/WorkReport.html
+++ b/public/js/logwork/templates/WorkReport.html
@@ -1,4 +1,7 @@
 
+<script src="/js/lib/bootstrap-table.js"></script>
+<script src="/js/lib/bootstrap-table-export.js"></script>
+
 <div class="row">
   <div class="col-md-12">
     <p>
