--- a/public/js/logwork/templates/WorkReport.html
+++ b/public/js/logwork/templates/WorkReport.html
@@ -4,8 +4,8 @@
 
 <div class="row">
   <div class="col-md-12">
-    <p>
-      This is the Work Report View.
-    </p>
+    <p id="resultsMessage">Loading...</p>
+    
+    <table id="resultsTable"></table>
   </div>
 </div>
