--- a/public/js/logwork/templates/WorkReport.html
+++ b/public/js/logwork/templates/WorkReport.html
@@ -9,5 +9,7 @@
     <p id="resultsMessage">Loading...</p>
     
     <table id="resultsTable"></table>
+    <br />
+    <button type="button" class="btn btn-default" id="exportButton">Export</button>
   </div>
 </div>
