Working on Log Work view - table export

--- a/public/js/logwork/templates/WorkReport.html
+++ b/public/js/logwork/templates/WorkReport.html
@@ -10,6 +10,6 @@
     
     <table id="resultsTable"></table>
     <br />
-    <button type="button" class="btn btn-default" id="exportButton">Export</button>
+    <!-- <button type="button" class="btn btn-default" id="exportButton">Export</button> -->
   </div>
 </div>
