Dynamically populating projects drop-down in logWorkView.js

--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -13,20 +13,20 @@
         </div>
 
         <div class="col-md-3">
+          <label for="logProject">Project:</label>
+          <select class="form-control" id="logProject">
+            <option>Project 1</option>
+            <option>Project 2</option>
+            <option>Project 3</option>
+          </select>
+        </div>
+        
+        <div class="col-md-3">
           <label for="logWorkType">Type of Work:</label>
           <select class="form-control" id="logWorkType">
             <option>Type 1</option>
             <option>Type 2</option>
             <option>Type 3</option>
-          </select>
-        </div>
-
-        <div class="col-md-3">
-          <label for="logProject">Type of Work:</label>
-          <select class="form-control" id="logProject">
-            <option>Project 1</option>
-            <option>Project 2</option>
-            <option>Project 3</option>
           </select>
         </div>
 
