creating project view

--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -274,43 +274,7 @@
           
           <div class="container" id="workReportView" hidden></div>
           
-          <!--
-          <div class="container" id="pagesView" hidden>            
-          </div>
-          
-          <div class="container" id="postsView" hidden>            
-          </div>
-          
-          <div class="container" id="pagesAddNewView" hidden>            
-          </div>
-          
-          <div class="container" id="postsAddNewView" hidden>            
-          </div>
-          
-          <div class="container" id="imageLibraryView" hidden>            
-          </div>
-          
-          <div class="container" id="imageAddNewView" hidden>            
-          </div>
-          
-          <div class="container" id="membersView" hidden>            
-          </div>
-          
-          <div class="container" id="eventCalendarView" hidden>            
-          </div>
-          
-          <div class="container" id="advertisingView" hidden>            
-          </div>
-          
-          <div class="container" id="fileLibraryView" hidden>            
-          </div>
-          
-          <div class="container" id="categoriesView" hidden>            
-          </div>
-          
-          <div class="container" id="sectionsView" hidden>            
-          </div>
-          -->
+          <div class="container" id="projectView" hidden></div>
 
         </section><!-- /.content -->
       </div><!-- /.content-wrapper -->
@@ -337,34 +301,7 @@
           <!-- Home tab content -->
           <div class="tab-pane active" id="control-sidebar-home-tab">
             <h3 class="control-sidebar-heading">Help</h3>
-            <!--
-            <ul class="control-sidebar-menu">
-              <li>
-                <a href="javascript::;">
-                  <i class="menu-icon fa fa-birthday-cake bg-red"></i>
-                  <div class="menu-info">
-                    <h4 class="control-sidebar-subheading">Langdon's Birthday</h4>
-                    <p>Will be 23 on April 24th</p>
-                  </div>
-                </a>
-              </li>
-            </ul>
-
-            <h3 class="control-sidebar-heading">Tasks Progress</h3>
-            <ul class="control-sidebar-menu">
-              <li>
-                <a href="javascript::;">
-                  <h4 class="control-sidebar-subheading">
-                    Custom Template Design
-                    <span class="label label-danger pull-right">70%</span>
-                  </h4>
-                  <div class="progress progress-xxs">
-                    <div class="progress-bar progress-bar-danger" style="width: 70%"></div>
-                  </div>
-                </a>
-              </li>
-            </ul>
-            -->
+            
             <p>
               This is where the on-site guidence will go.
             </p>
