Updating project and user model when work is logged

--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -3,8 +3,15 @@
 
 <div class="row">
   <div class="col-md-12">
-    <p>
-      This is the project view.
-    </p>
+    <form class="form-horizontal">
+      <div class="form-group">
+        <div class="col-md-3">
+          <label for="logProject">Select Project:</label>
+          <select class="form-control" id="logProject">
+            <option></option>
+          </select>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
