creating project view

--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -7,7 +7,7 @@
       <div class="form-group">
         <div class="col-md-3">
           <label for="logProject">Select Project:</label>
-          <select class="form-control" id="logProject">
+          <select class="form-control" id="projectList">
             <option></option>
           </select>
         </div>
