--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -15,3 +15,12 @@
     </form>
   </div>
 </div>
+
+<hr />
+
+<div class="row">
+  <div class="col-md-12">
+    <h2>Pie Chart</h2>
+    <canvas id="pieChart" width="400" height="400"></canvas>
+  </div>
+</div>
