--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -23,4 +23,17 @@
     <h2>Pie Chart</h2>
     <canvas id="pieChart" width="200" height="200"></canvas>
   </div>
+  <div class="col-md-8">
+    <table class="table table-striped table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>User</th>
+          <th>Hours</th>
+        </tr>
+      </thead>
+      <tbody id="projectTable">
+        
+      </tbody>
+    </table>
+  </div>
 </div>
