--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -23,7 +23,8 @@
     <h2>Pie Chart</h2>
     <canvas id="pieChart" width="200" height="200"></canvas>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-2"></div>
+  <div class="col-md-4">
     <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
