--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -3,7 +3,7 @@
     
     <form class="form-horizontal">
       <div class="form-group">
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-2 col-sm-6">
           <div class="input-group date" data-provide="datepicker">
             <label for="logDate">Date</label>
             <input type="text" class="form-control datepicker" id="logDate" placeholder="" data-date-auto-close="true">
@@ -12,7 +12,7 @@
           </div>
         </div>
 
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-2 col-sm-6">
           <label for="logProject">Project:</label>
           <select class="form-control" id="logProject">
             <option>Project 1</option>
@@ -21,7 +21,7 @@
           </select>
         </div>
         
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-2 col-sm-6">
           <label for="logWorkType">Type of Work:</label>
           <select class="form-control" id="logWorkType">
             <option>Type 1</option>
@@ -30,10 +30,13 @@
           </select>
         </div>
 
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-2 col-sm-6">
           <label for="logHour">Hours Worked:</label>
           <input type="number" class="form-control" id="logHour" placeholder="" step="0.25">
         </div>
+        
+        <!-- Empty space -->
+        <div class="col-md-4"></div>
       </div>
       
       <div class="form-group">
