--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -38,3 +38,9 @@
     </table>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-md-12">
+    <canvas id="barChart"></canvas>
+  </div>
+</div>
