Adding horizontal bar chart to project view

--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -44,3 +44,9 @@
     <canvas id="barChart"></canvas>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-md-12">
+    <canvas id="testChart"></canvas>
+  </div>
+</div>
