Styling horizontal bar chart and View Project view

--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<hr />
+<hr style="border-style: solid; border-width: 3px;border-color: black;" hidden />
 
 <div class="row">
   <div class="col-md-4">
@@ -40,7 +40,7 @@
 </div>
 
 <br />
-<hr style="border-style: solid; border-width: 3px;border-color: black;" />
+<hr style="border-style: solid; border-width: 3px;border-color: black;" hidden />
 <br />
 
 <div class="row">
