Styling horizontal bar chart and View Project view

--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -8,7 +8,7 @@
         <div class="col-md-3">
           <label for="logProject">Select Project:</label>
           <select class="form-control" id="projectList">
-            <option></option>
+
           </select>
         </div>
       </div>
@@ -18,7 +18,7 @@
 
 <hr style="border-style: solid; border-width: 3px;border-color: black;" hidden />
 
-<div class="row">
+<div class="row" hidden>
   <div class="col-md-4">
     <h2>Pie Chart</h2>
     <canvas id="pieChart" width="200" height="200"></canvas>
@@ -43,16 +43,9 @@
 <hr style="border-style: solid; border-width: 3px;border-color: black;" hidden />
 <br />
 
-<div class="row">
+<div class="row" hidden>
   <div class="col-md-12">
     <canvas id="barChart"></canvas>
   </div>
 </div>
 
-<!-- 
-<div class="row">
-  <div class="col-md-12">
-    <canvas id="testChart"></canvas>
-  </div>
-</div>
--->
