Styling horizontal bar chart and View Project view

--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -8,7 +8,7 @@
         <div class="col-md-3">
           <label for="logProject">Select Project:</label>
           <select class="form-control" id="projectList">
-
+            <option id="defaultOption"></option>
           </select>
         </div>
       </div>
