Styling horizontal bar chart and View Project view

--- a/public/js/logwork/templates/projects.html
+++ b/public/js/logwork/templates/projects.html
@@ -20,7 +20,7 @@
 
 <div class="row" hidden>
   <div class="col-md-4">
-    <h2>Pie Chart</h2>
+    <h2>Member-Hour Breakdown</h2>
     <canvas id="pieChart" width="200" height="200"></canvas>
   </div>
   <div class="col-md-2"></div>
@@ -36,6 +36,9 @@
         
       </tbody>
     </table>
+    <p>
+      This chart and table show the breakdown of all the hours contributed to a project. Each person's contribution is displayed relative to the total.
+    </p>
   </div>
 </div>
 
@@ -45,6 +48,10 @@
 
 <div class="row" hidden>
   <div class="col-md-12">
+    <h2>Work by Category</h2>
+    <p>
+      This chart shows a breakdown of hours by category for each contributor to the project.
+    </p>
     <canvas id="barChart"></canvas>
   </div>
 </div>
