--- a/templates/views/logwork.hbs
+++ b/templates/views/logwork.hbs
@@ -42,7 +42,9 @@
         requirejs(['../js/cms_common'], function (common) {
           requirejs(['/js/dependencies-round1.js'], function (common) {
             requirejs(['/js/dependencies-round2.js'], function (common) {
-              requirejs(['/js/logwork/logwork_app.js']);
+              requirejs(['/js/dependencies-round3.js'], function (common) {
+                requirejs(['/js/logwork/logwork_app.js']);
+              });
             });
           });
         });
