--- a/public/js/logwork/templates/WorkReport.html
+++ b/public/js/logwork/templates/WorkReport.html
@@ -8,6 +8,10 @@
   <div class="col-md-12">
     <p id="resultsMessage">Loading...</p>
     
+    <p>
+      This table shows the last 50 work entries. To view all entries, <a href="#/">click here</a>.
+    </p>
+    
     <table id="resultsTable"></table>
     <br />
     <!-- <button type="button" class="btn btn-default" id="exportButton">Export</button> -->
