Adding last 5 work entries at bottom of logWorkView.js

--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -52,3 +52,18 @@
     
   </div>
 </div>
+
+
+<div class="row">
+  <div class="col-md-12">
+    <p id="resultsMessage">Loading...</p>
+    
+    <p>
+      This table shows the last 50 work entries. To view all entries, <a href="#/">click here</a>.
+    </p>
+    
+    <table id="resultsTable"></table>
+    <br />
+    <!-- <button type="button" class="btn btn-default" id="exportButton">Export</button> -->
+  </div>
+</div>
