Adding last 5 work entries at bottom of logWorkView.js

--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -59,7 +59,7 @@
     <p id="resultsMessage">Loading...</p>
     
     <p>
-      This table shows the last 50 work entries. To view all entries, <a href="#/">click here</a>.
+      This table shows the last 5 work entries, based on date.
     </p>
     
     <table id="resultsTable"></table>
