--- a/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
@@ -1,136 +1,138 @@
 
-<style>
-  .required {
-    color: red;
-    font-size: 24px;
-  }
-</style>
-
-<h1>Create an RPiOVN Account</h1>
-
-<p>If you'd like to contribute time to a project and have it count, you'll need to log your time in <a href="/logwork">the project dashboard</a>, but before you can do that, you'll need an account. Fill out the form below to apply for instant access.</p>
-
-<h1 id="successMsg" hidden="">&nbsp;</h1>
-<p id="successMsg2" hidden="">&nbsp;</p>
-
-<form class="form-horizontal" id="newProjectForm">
-  <p><span class="required">*</span>= required.</p>
-
-  <div class="form-group">
-    <label for="inputFirstName" class="col-sm-3 control-label"><span class="required">*</span>First Name:</label>
-    <div class="col-sm-9">
-      <input type="text" class="form-control" name="inputFirstName" id="inputFirstName" placeholder="">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="inputLastName" class="col-sm-3 control-label"><span class="required">*</span>Last Name:</label>
-    <div class="col-sm-9">
-      <input type="text" class="form-control" name="inputLastName" id="inputLastName" placeholder="">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="inputEmail" class="col-sm-3 control-label"><span class="required">*</span>Email:</label>
-    <div class="col-sm-9">
-      <input type="email" class="form-control" name="inputEmail" id="inputEmail" placeholder="user@server.com">
-    </div>
-  </div>
-  
-  <div class="form-group">
-    <label for="inputPassword1" class="col-sm-3 control-label"><span class="required">*</span>Password:</label>
-    <div class="col-sm-9">
-      <input type="password" class="form-control" name="inputEmail" id="inputPassword1" placeholder="">
-    </div>
-  </div>
-  
-  <div class="form-group">
-    <label for="inputPassword2" class="col-sm-3 control-label"><span class="required">*</span>Confirm Password:</label>
-    <div class="col-sm-9">
-      <input type="password" class="form-control" name="inputEmail" id="inputPassword2" placeholder="">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="inputAddress" class="col-sm-3 control-label">Address:</label>
-    <div class="col-sm-9">
-      <input type="text" class="form-control" name="inputAddress" id="inputAddress" placeholder="">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="inputPhone" class="col-sm-3 control-label">Phone:</label>
-    <div class="col-sm-9">
-      <input type="text" class="form-control" name="inputPhone" id="inputPhone" placeholder="555-555-5555">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="inputWebsite" class="col-sm-3 control-label">Website:</label>
-    <div class="col-sm-9">
-      <input type="text" class="form-control" name="inputWebsite" id="inputWebsite" placeholder="http://www.url.com">
-    </div>
-  </div> 
-
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="button" class="btn btn-default" id="submitButton">Submit</button>
-    </div>
-  </div>
-
-</form>
-<h1 id="successMsg" hidden></h1>
-<p id="successMsg2" hidden></p>
-
-<script src="http://rpiovn.com/js/jquery/jquery-2.1.4.min.js"></script>
-<script type="text/javascript">
-  //Global Variables
-  global = new Object(); //This is where all global variables will be stored.
-  //global.serverIp = "104.131.137.38"; //Production Server
-  //global.serverIp = "192.241.198.211"; //Test Server
-  //global.serverPort = "80";
-  //global.nrpPort = "8000";
-  //global.nodemailerPort = "3000";
-
-  $("#submitButton").click(function(event) {
-    //debugger;
-    event.preventDefault();
-
-    if($('#inputPassword1').val() != $('#inputPassword2').val()) {
-      alert('Passwords do not match!');
-      return;
+<div class="container">
+  <style>
+    .required {
+      color: red;
+      font-size: 24px;
     }
-    
-    /* BEGIN SUBMIT NEW USER ACCOUNT */
-    var userData = new Object();
-    userData.name = $('#inputFirstName').val()+' '+$('#inputLastName').val();
-    userData.firstName = $('#inputFirstName').val();
-    userData.lastName = $('#inputLastName').val();
-    userData.email = $('#inputEmail').val();
-    userData.password = $('#inputPassword1').val();
+  </style>
 
-    //Check required inputs
-    if( (userData.username == "") || (userData.first_name == "") || (userData.last_name == "") || (userData.email == "") || (userData.password == "") ) {
-      console.log('Invalid/empty input');
-      alert('At least one required input is missing. Please check the form.');
-      return;
-    }
+  <h1>Create an RPiOVN Account</h1>
 
-    //Put some code here to check against existing user names.
+  <p>If you'd like to contribute time to a project and have it count, you'll need to log your time in <a href="/logwork">the project dashboard</a>, but before you can do that, you'll need an account. Fill out the form below to apply for instant access.</p>
 
-    //Submit the data to the server.
-    $.post('/api/users/create', userData, function(data) {
-      debugger;
+  <h1 id="successMsg" hidden="">&nbsp;</h1>
+  <p id="successMsg2" hidden="">&nbsp;</p>
 
-      if( data.nrpuser._id != "" ) {
-        console.log('Success!');
-        alert('Thank you for signing up for a new account! An email confirmation is being sent to you. You can now log in with your email and password.');
-        window.location.href = "/keystone/signin";
+  <form class="form-horizontal" id="newProjectForm">
+    <p><span class="required">*</span>= required.</p>
+
+    <div class="form-group">
+      <label for="inputFirstName" class="col-sm-3 control-label"><span class="required">*</span>First Name:</label>
+      <div class="col-sm-9">
+        <input type="text" class="form-control" name="inputFirstName" id="inputFirstName" placeholder="">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="inputLastName" class="col-sm-3 control-label"><span class="required">*</span>Last Name:</label>
+      <div class="col-sm-9">
+        <input type="text" class="form-control" name="inputLastName" id="inputLastName" placeholder="">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="inputEmail" class="col-sm-3 control-label"><span class="required">*</span>Email:</label>
+      <div class="col-sm-9">
+        <input type="email" class="form-control" name="inputEmail" id="inputEmail" placeholder="user@server.com">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="inputPassword1" class="col-sm-3 control-label"><span class="required">*</span>Password:</label>
+      <div class="col-sm-9">
+        <input type="password" class="form-control" name="inputEmail" id="inputPassword1" placeholder="">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="inputPassword2" class="col-sm-3 control-label"><span class="required">*</span>Confirm Password:</label>
+      <div class="col-sm-9">
+        <input type="password" class="form-control" name="inputEmail" id="inputPassword2" placeholder="">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="inputAddress" class="col-sm-3 control-label">Address:</label>
+      <div class="col-sm-9">
+        <input type="text" class="form-control" name="inputAddress" id="inputAddress" placeholder="">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="inputPhone" class="col-sm-3 control-label">Phone:</label>
+      <div class="col-sm-9">
+        <input type="text" class="form-control" name="inputPhone" id="inputPhone" placeholder="555-555-5555">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="inputWebsite" class="col-sm-3 control-label">Website:</label>
+      <div class="col-sm-9">
+        <input type="text" class="form-control" name="inputWebsite" id="inputWebsite" placeholder="http://www.url.com">
+      </div>
+    </div> 
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="button" class="btn btn-default" id="submitButton">Submit</button>
+      </div>
+    </div>
+
+  </form>
+  <h1 id="successMsg" hidden></h1>
+  <p id="successMsg2" hidden></p>
+
+  <script src="http://rpiovn.com/js/jquery/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript">
+    //Global Variables
+    global = new Object(); //This is where all global variables will be stored.
+    //global.serverIp = "104.131.137.38"; //Production Server
+    //global.serverIp = "192.241.198.211"; //Test Server
+    //global.serverPort = "80";
+    //global.nrpPort = "8000";
+    //global.nodemailerPort = "3000";
+
+    $("#submitButton").click(function(event) {
+      //debugger;
+      event.preventDefault();
+
+      if($('#inputPassword1').val() != $('#inputPassword2').val()) {
+        alert('Passwords do not match!');
+        return;
       }
+
+      /* BEGIN SUBMIT NEW USER ACCOUNT */
+      var userData = new Object();
+      userData.name = $('#inputFirstName').val()+' '+$('#inputLastName').val();
+      userData.firstName = $('#inputFirstName').val();
+      userData.lastName = $('#inputLastName').val();
+      userData.email = $('#inputEmail').val();
+      userData.password = $('#inputPassword1').val();
+
+      //Check required inputs
+      if( (userData.username == "") || (userData.first_name == "") || (userData.last_name == "") || (userData.email == "") || (userData.password == "") ) {
+        console.log('Invalid/empty input');
+        alert('At least one required input is missing. Please check the form.');
+        return;
+      }
+
+      //Put some code here to check against existing user names.
+
+      //Submit the data to the server.
+      $.post('/api/users/create', userData, function(data) {
+        debugger;
+
+        if( data.nrpuser._id != "" ) {
+          console.log('Success!');
+          alert('Thank you for signing up for a new account! An email confirmation is being sent to you. You can now log in with your email and password.');
+          window.location.href = "/keystone/signin";
+        }
+      });
+
+      /* END SUBMIT NEW USER ACCOUNT */
+
     });
 
-    /* END SUBMIT NEW USER ACCOUNT */
-
-  });
-
-</script>
+  </script>
+</div>
