--- a/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
@@ -66,11 +66,7 @@
   <script type="text/javascript">
     //Global Variables
     global = new Object(); //This is where all global variables will be stored.
-    //global.serverIp = "104.131.137.38"; //Production Server
-    //global.serverIp = "192.241.198.211"; //Test Server
-    //global.serverPort = "80";
-    //global.nrpPort = "8000";
-    //global.nodemailerPort = "3000";
+
 
     $("#submitButton").click(function(event) {
       //debugger;
@@ -102,7 +98,7 @@
       $.post('/api/users/create', userData, function(data) {
         debugger;
 
-        if( data.nrpuser._id != "" ) {
+        if( data.user._id != "" ) {
           console.log('Success!');
           alert('Thank you for signing up for a new account! An email confirmation is being sent to you. You can now log in with your email and password.');
           window.location.href = "/keystone/signin";
