--- a/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
@@ -103,7 +103,18 @@
           alert('Thank you for signing up for a new account! An email confirmation is being sent to you. You can now log in with your email and password.');
           window.location.href = "/keystone/signin";
         }
-      });
+      })
+      .fail(function(jqxhr, textStatus, error) {
+          debugger;
+          
+          try {
+            global.modalView.errorModal("Request failed because of: "+error+'. Error Message: '+jqxhr.responseText);
+            console.log( "Request Failed: " + error );
+            console.error('Error message: '+jqxhr.responseText);
+          } catch(err) {
+            console.error('Error trying to retrieve JSON data from server response.');
+          } 
+        });
 
       /* END SUBMIT NEW USER ACCOUNT */
 
