Building email API and contactus View

--- a/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
@@ -108,7 +108,7 @@
           debugger;
           
           try {
-            global.modalView.errorModal("Request failed because of: "+error+'. Error Message: '+jqxhr.responseText);
+            //global.modalView.errorModal("Request failed because of: "+error+'. Error Message: '+jqxhr.responseText);
             console.log( "Request Failed: " + error );
             console.error('Error message: '+jqxhr.responseText);
           } catch(err) {
