--- a/plugin/rpiovn-plugin/keystone/templates/views/contactus.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/contactus.hbs
@@ -58,21 +58,25 @@
         data.from = $('#inputEmail').val();
         
 
-        $.get('/api/email/send', data, function(success) {
+        $.get('/api/email/send', data, function(data) {
           debugger;
 
-          $('#newProjectForm').hide();
-          $('#successMsg').show();
-          $('#successMsg').text('Success!');
-          $('#successMsg2').show();
-          $('#successMsg2').text('Thank you for submitting your message. We will be in touch.');
-          $('#successMsg2').css('font-weight', 'bold');
+          if(data.success) {
+            $('#newProjectForm').hide();
+            $('#successMsg').show();
+            $('#successMsg').text('Success!');
+            $('#successMsg2').show();
+            $('#successMsg2').text('Thank you for submitting your message. We will be in touch.');
+            $('#successMsg2').css('font-weight', 'bold');
+          } else {
+            alert('Error while trying to send email!');
+          }
         })
         .fail(function(jqxhr, textStatus, error) {
           debugger;
           
           try {
-            global.modalView.errorModal("Request failed because of: "+error+'. Error Message: '+jqxhr.responseText);
+            //global.modalView.errorModal("Request failed because of: "+error+'. Error Message: '+jqxhr.responseText);
             console.log( "Request Failed: " + error );
             console.error('Error message: '+jqxhr.responseText);
           } catch(err) {
