--- a/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
@@ -114,7 +114,7 @@
             "<a href='http://rpiovn.com/keystone/signin'>You can sign in here</a>"+
             "</body></html>";
           
-          $.get('/api/email/send', data, function(data) {
+          $.get('/api/email/send', emailData, function(data) {
             if(data.success) {
               console.log('Success!');
               alert('Thank you for signing up for a new account! An email confirmation is being sent to you. You can now log in with your email and password.');
