--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -145,6 +145,9 @@
     <script src="/js/bootstrap-hover-dropdown.min.js"></script>
 		{{{isAdminEditorJS user}}}
     
+    <!-- Import server settings -->
+    <script src="/js/serversettings.js"></script>
+    
     <script type="text/javascript">
       /*
       $(document).ready(function(){
