--- a/plugin/rpiovn-plugin/keystone/templates/views/projectapplication.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/projectapplication.hbs
@@ -3,7 +3,7 @@
 
 
     <p>&nbsp;</p>
-    <p>Before you can start a project, you need to <a href="http://rpiovn.com/page/create-nrp-account">create an NRP account</a>. Be sure to do that first!</p>
+    <p>Before you can start a project, you need to <a href="/createaccount">create an account</a>. Be sure to do that first!</p>
     <p>All projects must have a project manager. If you start a project, <u>you</u> are the project manager. If you don't want to be the project manager, then you need to find someone to take over the role. Project managers are the primary point of contact for people interested in contributing to a project, and they must have an up-to-date email address for people to use to contact them.&nbsp;</p>
     <p>&nbsp;</p>
     <p>Fill out the application form below to submit your project idea:</p>
@@ -31,7 +31,7 @@
       </div>
 
       <br>
-      <p>A good template to use as an example for filling out the sections below is the <a href="http://rpiovn.com/page/simple-tracking-device">GPS tracking device</a>. Adapt your project information to fit the format of information on that project, and fill it in below.</p>
+      <p>A good template to use as an example for filling out the sections below is the <a href="/page/rpi-tracking-device">GPS tracking device</a>. Adapt your project information to fit the format of information on that project, and fill it in below.</p>
       <div class="form-group">
         <label for="inputSummary" class="col-sm-2 control-label">Project Summary:</label>
         <div class="col-sm-10">            
