making bootstrap table responsive

--- a/public/js/logwork/templates/logWork.html
+++ b/public/js/logwork/templates/logWork.html
@@ -62,7 +62,9 @@
       This table shows the last 5 work entries, based on date.
     </p>
     
-    <table id="resultsTable"></table>
+    <div class="table-responsive">
+      <table id="resultsTable" class="table"></table>
+    </div>
     <br />
     <!-- <button type="button" class="btn btn-default" id="exportButton">Export</button> -->
   </div>
