making bootstrap table responsive

--- a/plugin/rpiovn-plugin/keystone/templates/views/logwork.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/logwork.hbs
@@ -281,9 +281,9 @@
           
           <div class="container" id="dashboardView" hidden></div>
           
-          <div class="container" id="logWorkView" hidden></div>
+          <div class="container-fluid" id="logWorkView" hidden></div>
           
-          <div class="container" id="workReportView" hidden></div>
+          <div class="container-fluid" id="workReportView" hidden></div>
           
           <div class="container" id="projectView" hidden></div>
 
