--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -70,7 +70,7 @@
               </li>
               -->
               
-              <li><a href="http://rpiovn.com/blog">Blog</a></li>
+              <li><a href="/blog">Blog</a></li>
               
               <!-- KeystoneJS default menu items. -->
               <!--
