Replacing log-in logo

--- a/plugin/rpiovn-plugin/keystone/templates/views/index.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/index.hbs
@@ -74,7 +74,7 @@
 
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-time'></i>
-        <h3>Log Time in the NRP</h3>
+        <h3>Log Time</h3>
         <p>Developers and technical writers can <a href="/logwork" target="_blank">log time</a> and effort in the <a href="/logwork" target="_blank">Project Dashboard</a>. Logging work ensures you are fairly paid for your effort when a project is sold in the store or generates an affiliate sale. You'll need to <a href="/createaccount">apply for an account</a> before you can begin contributing to projects.</p>
       </div>
     </div>
