--- a/plugin/rpiovn-plugin/keystone/templates/views/index.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/index.hbs
@@ -63,13 +63,13 @@
       <div class='col-sm-4 col-xs-10 col-xs-offset-1 col-sm-offset-0'>
         <i class='glyphicon glyphicon-shopping-cart'></i>
         <h3>Consumer Product Store</h3>
-        <p>When projects reach maturity, they are offered <a href="#/">for sale on the store</a>. They are hand-built, fully tested, and shipped with documentation and support.</p>
+        <p>When projects reach maturity, they are offered <a href="http://store.rpiovn.com" target="_blank">for sale on the store</a>. They are hand-built, fully tested, and shipped with documentation and support.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-wrench'></i>
         <h3>Join A Project</h3>
-        <p>Want to participate? Read this guide on <a href="http://rpiovn.com/page/how-it-works">how it all works</a>, then <a href="http://rpiovn.com/page/browse-projects">browse our list of Raspberry Pi based open source projects</a>, or <a href="http://rpiovn.com/projectapplication">apply to start your own project</a>.</p>
+        <p>Want to participate? Read this guide on <a href="/page/how-it-works">how it all works</a>, then <a href="/page/browse-projects">browse our list of Raspberry Pi based open source projects</a>, or <a href="/projectapplication">apply to start your own project</a>.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
