--- a/plugin/rpiovn-plugin/keystone/templates/views/contactus.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/contactus.hbs
@@ -37,7 +37,7 @@
     <script type="text/javascript">
 
       $("#submitButton").click(function(event) {
-        debugger;
+        //debugger;
         event.preventDefault();
 
         var destination_email = "chris.troutner@gmail.com";
