--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <!-- Create and show the pre-loader animation before anything else -->
-  <link rel="stylesheet" href="../styles/preloader.css">
+  <link rel="stylesheet" href="/styles/preloader.css">
   <div id="loader-wrapper">
     <div id="loader"></div>
   </div>
