improving the /logwork dashboard view

--- a/public/js/logwork/templates/dashboard.html
+++ b/public/js/logwork/templates/dashboard.html
@@ -10,21 +10,11 @@
 <div class="row">
   <div class="col-md-12">
     <ul>
-      <li><a href="#">Log your time</a></li>
-      <li><a href="#">View Projects and Contributions</a></li>
+      <li><a href="#"><h2>Log your time</h2></a></li>
+      <li><a href="#"><h2>View Projects and Contributions</h2></a></li>
     </ul>
   </div>
 </div>
 
 <br />
 <hr />
-<div class="row">
-  <div class="col-md-12">
-    <p>Please ignore this. It is for testing and will be removed.</p>
-    <br />
-    <!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"> -->
-    <button type="button" class="btn btn-primary btn-lg" onclick="global.dashboardView.openModal()">
-      Launch demo modal
-    </button>
-  </div>
-</div>
