--- a/public/js/logwork/templates/dashboard.html
+++ b/public/js/logwork/templates/dashboard.html
@@ -10,8 +10,8 @@
 <div class="row">
   <div class="col-md-12">
     <ul>
-      <li><a href="#"><h2>Log your time</h2></a></li>
-      <li><a href="#"><h2>View Projects and Contributions</h2></a></li>
+      <li><a href="#/" onclick="global.leftMenuView.showLogWork()"><h2>Log your time</h2></a></li>
+      <li><a href="#/" onclick="global.leftMenuView.showProjectView()"><h2>View Projects and Contributions</h2></a></li>
     </ul>
   </div>
 </div>
