--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -1,5 +1,7 @@
 <section>
   <div class="container">
-  
+    <div class="col-md-12">
+      <h1>Hello world!</h1>
+    </div>
   </div>
 </section>
