--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -1,7 +1,42 @@
 <section>
   <div class="container">
-    <div class="col-md-12">
-      <h1>Hello world!</h1>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="http://rpiovn.org/images/rpi-tracker.jpg" class="img-responsive center-block" />
+      </div>
+      <div class="col-md-8 projSummary">
+
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-md-12">
+
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+          <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Project Info</a></li>
+          <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Hardware</a></li>
+          <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Software</a></li>
+          <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">FAQ</a></li>
+        </ul>
+
+        <!-- Tab panes -->
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane active" id="home">
+            <p>Project Info</p>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="profile">
+            <p>Hardware</p>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="messages">
+            <p>Software</p>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="settings">
+            <p>Frequently Asked Questions</p>
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
 </section>
