--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -14,10 +14,10 @@
 
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Project Info</a></li>
-          <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Hardware</a></li>
-          <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Software</a></li>
-          <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">FAQ</a></li>
+          <li role="presentation" class="active"><a href="#projectInfo" role="tab" data-toggle="tab">Project Info</a></li>
+          <li role="presentation"><a href="#hardware" role="tab" data-toggle="tab">Hardware</a></li>
+          <li role="presentation"><a href="#software" role="tab" data-toggle="tab">Software</a></li>
+          <li role="presentation"><a href="#faq" role="tab" data-toggle="tab">FAQ</a></li>
         </ul>
 
         <!-- Tab panes -->
