--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -48,9 +48,9 @@
         var projectInfo = data.projectinfo;
         
         $('.projSummary').append(projectInfo[0].basicInfo);
-        $('#projectInfo').append(projectInfo[0].summary);
-        $('#hardware').append(projectInfo[0].hardware);
-        $('#software').append(projectInfo[0].software);
+        //$('#projectInfo').append(projectInfo[0].summary);
+        //$('#hardware').append(projectInfo[0].hardware);
+        //$('#software').append(projectInfo[0].software);
         
       });
     });
