--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -42,19 +42,22 @@
   
   <script type="text/javascript">
     $(document).ready(function() {
-      /*
+      
       $.get('/api/projectinfo/list', '', function(data) {
         debugger;
         
         var projectInfo = data.projectinfo;
         
         $('.projSummary').append(projectInfo[0].basicInfo);
-        //$('#projectInfo').append(projectInfo[0].summary);
-        //$('#hardware').append(projectInfo[0].hardware);
-        //$('#software').append(projectInfo[0].software);
+        $('#projectInfo').append(projectInfo[0].summary);
+        $('#hardware').append(projectInfo[0].hardware);
+        $('#software').append(projectInfo[0].software);
         
+        //Activate the tabs to get content to show
+        $('.nav-tabs').find('a').last().tab('show');
+        $('.nav-tabs').find('a').first().tab('show')
       });
-      */
+      
     });
   </script>
 </section>
