--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -1,16 +1,16 @@
 <section>
   <div class="container">
-    <div class="row">
+    <div class="row" style="border: 1px solid;">
       <div class="col-md-4">
         <img src="http://rpiovn.org/images/rpi-tracker.jpg" class="img-responsive center-block projImg" />
       </div>
-      <div class="col-md-8 projSummary">
+      <div class="col-md-8 projSummary" style="border: 1px solid;">
 
       </div>
     </div>
     
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12" style="border: 1px solid;">
 
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
