--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -1,7 +1,7 @@
 <section>
   <div class="container">
-    <div class="row" style="border: 1px solid;">
-      <div class="col-md-4">
+    <div class="row" >
+      <div class="col-md-4" style="border: 1px solid;">
         <img src="http://rpiovn.org/images/rpi-tracker.jpg" class="img-responsive center-block projImg" />
       </div>
       <div class="col-md-8 projSummary" style="border: 1px solid;">
